--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>El amigo del peregrino</title>
 </head>
+<nav>
+  <input type="text" id="search" placeholder="Busca una ciudad">
+  <datalist id="paradas">
+    <option value="Santiago de Compostela">
+    <option value="O Pedrouzo">
+    <option value="Arzúa">  
+  </datalist>
+</nav>
 <body>
-  <h1></h1>
-
+  <img src="img/rutafrancesa.png" alt="Ruta francesa">
+  <h1>Camino francés</h1>
+  <p>El camino francés es el más popular de los caminos de Santiago. Es el que más peregrinos recibe cada año. Es el camino más corto y el más fácil de recorrer. Es el camino que más gente recomienda para hacer el Camino de Santiago.</p>
+  <h1>Parada destacada: Burgos</h1>
+  <img src="img/destacada.png" alt="Lugar destacado">
 </body>
 </html>
