--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <title>Inicio - El amigo del peregrino</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/index.js"></script>
 </head>
-<link rel="stylesheet" href="css/style.css">
-<script src="js/index.js"></script>
-<nav>
-  <input type="text" id="search" placeholder="Busca una ciudad">
-  <datalist id="paradas">
-    <option value="Santiago de Compostela">
-    <option value="O Pedrouzo">
-    <option value="Arzúa">  
-  </datalist>
-</nav>
+
 <body>
+  <nav>
+    <input list="paradas" id="escoger-parada" placeholder="Busca una parada">
+    <datalist id="paradas">
+      <option value="Santiago de Compostela">
+      <option value="O Pedrouzo">
+      <option value="Arzúa">  
+    </datalist>
+  </nav>
   <img src="img/caminofrances.png" alt="Camino francés">
   <h1>Camino francés</h1>
   <p>El camino francés es el más popular de los caminos de Santiago. Es el que más peregrinos recibe cada año. Es el camino más corto y el más fácil de recorrer. Es el camino que más gente recomienda para hacer el Camino de Santiago.</p>
