--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <input list="paradas" id="escoger-parada" placeholder="Busca una parada">
     <datalist id="paradas">
       <option value="Santiago de Compostela">
-      <option value="O Pedrouzo">
-      <option value="Arzúa">  
+      <option value="León">
+      <option value="Burgos">
+      <option value="Pamplona">
+      <option value="Saint-Jean-Pied-de-Port"> 
     </datalist>
   </nav>
   <img src="img/caminofrances.png" alt="Camino francés">
