pagina principal - top sitios

--- a/index.html
+++ b/index.html
@@ -29,5 +29,17 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
       defer
     ></script>
+  <h2>Top restaurantes</h2>
+  <div>
+    <h3>Pepa a Loba (Santiago)</h3>
+    <p>Este centrico restaurante en la zona vieja de Santiago te embaucara con su localizacion y sus sabores</p>
+    <figure>
+      <img src="img/pepa_a_loba.jpg" alt="Pepa a Loba (Santiago)">
+    </figure>
+    <h3>El Tenedor (Burgos)</h3>
+    <p>No te vayas de Burgos sin probar las maravillas de este tradicional restaurante</p>
+    <h3>Le Restaurant (Saint-Jean-Pied-de-Port)</h3>
+    <p>Prueba las mejores delicias francesas en la primera parada del camino frances</p>
+  </div>
 </body>
 </html>
