--- a/index.html
+++ b/index.html
@@ -31,15 +31,21 @@
     ></script>
   <h2>Top restaurantes</h2>
   <div>
-    <h3>Pepa a Loba (Santiago)</h3>
-    <p>Este centrico restaurante en la zona vieja de Santiago te embaucara con su localizacion y sus sabores</p>
     <figure>
+      <h3>Pepa a Loba (Santiago)</h3>
+      <p>Este centrico restaurante en la zona vieja de Santiago te embaucara con su localizacion y sus sabores</p>  
       <img src="img/pepa_a_loba.jpg" alt="Pepa a Loba (Santiago)">
     </figure>
-    <h3>El Tenedor (Burgos)</h3>
-    <p>No te vayas de Burgos sin probar las maravillas de este tradicional restaurante</p>
-    <h3>Le Restaurant (Saint-Jean-Pied-de-Port)</h3>
-    <p>Prueba las mejores delicias francesas en la primera parada del camino frances</p>
+    <figure>
+      <h3>La Comtienda (Burgos)</h3>
+      <p>No te vayas de Burgos sin probar las maravillas de este tradicional restaurante</p>
+      <img src="img/lacomtienda.jpg" alt="La Comtienda (Burgos)">
+    </figure>
+    <figure>
+      <h3>Oillarburu (Saint-Jean-Pied-de-Port)</h3>
+      <p>Prueba las mejores delicias de la cocina vasca en la primera parada del camino frances</p>
+      <img src="img/oillarburu.jpg" alt="Oillarburu (Saint-Jean-Pied-de-Port)">
+    </figure>
   </div>
 </body>
 </html>
