--- a/pages/santiago.html
+++ b/pages/santiago.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Santiago de Compostela - El amigo del peregrino</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/index.js"></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <!-- <script src="../js/index.js"></script> -->
 </head>
 
 <body>
@@ -12,15 +12,36 @@
     <input list="paradas" id="escoger-parada" placeholder="Busca una parada">
     <datalist id="paradas">
       <option value="Santiago de Compostela">
-      <option value="O Pedrouzo">
-      <option value="Arzúa">  
+      <option value="León">
+      <option value="Burgos">
+      <option value="Pamplona">
+      <option value="Saint-Jean-Pied-de-Port"> 
     </datalist>
   </nav>
-  <img src="img/caminofrances.png" alt="Camino francés">
-  <h1>Camino francés</h1>
-  <p>El camino francés es el más popular de los caminos de Santiago. Es el que más peregrinos recibe cada año. Es el camino más corto y el más fácil de recorrer. Es el camino que más gente recomienda para hacer el Camino de Santiago.</p>
-  <h2>Parada destacada: Burgos</h2>
-  <img src="img/destacada.png" alt="Lugar destacado">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m58!1m12!1m3!1d3125700.556412189!2d-5.277426216683586!3d40.087858363279395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m43!3e2!4m5!1s0xd50d5616cb5d49f%3A0x27d43cc64a91e1c7!2sSaint-Jean-Pied-de-Port%2C%20France!3m2!1d43.163140999999996!2d-1.23811!4m5!1s0xd50928ba31965c7%3A0x4e6e903632cb2e90!2sPamplona!3m2!1d42.812526!2d-1.6457745!4m5!1s0xd5aab4130b390b1%3A0xf98252918a168870!2zTG9ncm_DsW8!3m2!1d42.4627195!2d-2.4449852!4m5!1s0xd45fcbe3dc20327%3A0xa1f5beab8e71aa1!2sBurgos!3m2!1d42.350465899999996!2d-3.6893545!4m5!1s0xd379a9a0d5e1bd9%3A0x7d849ffad4f1eef3!2zTGXDs24!3m2!1d42.5983611!2d-5.5718779!4m5!1s0xd3048097fbf82ad%3A0x9004c74b09000a64!2sSarria!3m2!1d42.7808389!2d-7.4140766!4m5!1s0xd2efe4326414707%3A0xa18e63b9d0a316c5!2sCathedral%20of%20Santiago%20de%20Compostela%2C%20Praza%20do%20Obradoiro%2C%20s%2Fn%2C%2015704%20Santiago%20de%20Compostela%2C%20A%20Coru%C3%B1a!3m2!1d42.8805962!2d-8.5446412!5e0!3m2!1sen!2ses!4v1676626122715!5m2!1sen!2ses" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  <figure>
+    <img src="../img/santiago/catedral.jpg" alt="Catedral de Santiago de Compostela">
+  </figure>
+  <h1>Santiago de Compostela</h1>
+  <p>
+    La ciudad de Santiago de Compostela es la capital de la provincia homónima y de la comunidad autónoma de Galicia.
+    Es la ciudad más poblada de Galicia y la quinta de España, con 95 000 habitantes en 2019.
+    Es la sede de la catedral de Santiago de Compostela, declarada Patrimonio de la Humanidad por la Unesco en 1985.
+    La ciudad es conocida por ser el destino final de la ruta jacobea, una de las rutas de peregrinación más importantes del mundo.
+    La ciudad es sede de la Universidad de Santiago de Compostela, la más antigua de España y una de las más antiguas de Europa.
+  </p>
+  <h2>Lugares destacados</h2>
+  <h3>Restaurantes</h3>
+  <p><a href="https://www.mercadolagaliciana.es/">La Galiciana</a></p>
+  <figure>
+    <img src="../img/santiago/la-galiciana.jpg" alt="La Galiciana">
+  </figure>
+  <h3>Discotecas top</h3>
+  <p><a href="https://www.instagram.com/discotecarutaoficial/">Discoteca Ruta</a></p>
+    <figure>
+        <img src="../img/santiago/discoteca-ruta.jpg" alt="Discoteca Ruta">
+    </figure>
+  <figure>
+    <img src="../img/destacada.png" alt="Lugar destacado">
+  </figure>
 </body>
 </html>
