--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Inicio - El amigo del peregrino</title>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/index.js"></script>
 </head>
 
@@ -35,23 +35,44 @@
   <h2>Parada destacada: Burgos</h2>
   <img src="img/destacada.png" alt="Lugar destacado">
   <div id="map"></div>
-  <h2>Top restaurantes</h2>
-  <div>
-    <figure>
-      <h3>Pepa a Loba (Santiago)</h3>
-      <p>Este centrico restaurante en la zona vieja de Santiago te embaucara con su localizacion y sus sabores</p>  
-      <img src="img/pepa_a_loba.jpg" alt="Pepa a Loba (Santiago)">
-    </figure>
-    <figure>
-      <h3>La Comtienda (Burgos)</h3>
-      <p>No te vayas de Burgos sin probar las maravillas de este tradicional restaurante</p>
-      <img src="img/lacomtienda.jpg" alt="La Comtienda (Burgos)">
-    </figure>
-    <figure>
-      <h3>Oillarburu (Saint-Jean-Pied-de-Port)</h3>
-      <p>Prueba las mejores delicias de la cocina vasca en la primera parada del camino frances</p>
-      <img src="img/oillarburu.jpg" alt="Oillarburu (Saint-Jean-Pied-de-Port)">
-    </figure>
+
+  <div class="sitios-home">
+    <h2>Top Restaurantes</h2>
+    <div class="restaurantes-home">
+      <figure>
+        <h3>Pepa a Loba (Santiago)</h3>
+        <p>Este centrico restaurante en la zona vieja de Santiago te embaucara con su localizacion y sus sabores</p>  
+        <img src="img/santiago/pepa_a_loba.jpg" alt="Pepa a Loba (Santiago)">
+      </figure>
+      <figure>
+        <h3>La Comtienda (Burgos)</h3>
+        <p>No te vayas de Burgos sin probar las maravillas de este tradicional restaurante</p>
+        <img src="img/burgos/lacomtienda.jpg" alt="La Comtienda (Burgos)">
+      </figure>
+      <figure>
+        <h3>Oillarburu (Saint-Jean-Pied-de-Port)</h3>
+        <p>Prueba las mejores delicias de la cocina vasca en la primera parada del camino frances</p>
+        <img src="img/saintjean/oillarburu.jpg" alt="Oillarburu (Saint-Jean-Pied-de-Port)">
+      </figure>
+    </div>
+    <h2>Top Pubs</h2>
+    <div class="pubs-home">
+      <figure>
+        <h3>Ruta (Santiago)</h3>
+        <p>En esta discoteca-pub te lo pasaras en grande con musica actual</p>  
+        <img src="img/santiago/discoteca-ruta.jpeg" alt="Ruta (Santiago)">
+      </figure>
+      <figure>
+        <h3>Gabana (León)</h3>
+        <p>Si los sitios de jovenes no es tu ambiente, esta discoteca de mediana edad sera tu espacio de disfrute</p>
+        <img src="img/leon/gabana.jpg" alt="Gabana (León)">
+      </figure>
+      <figure>
+        <h3>Cooper Club (Burgos)</h3>
+        <p>¿Buscas algo intermedio entre discoteca y pub? Cooper Club será tu sitio.</p>
+        <img src="img/burgos/cooper.jpg" alt="Cooper Club (Burgos)">
+      </figure>
+    </div>
   </div>
 </body>
 </html>
