Progreso barra nav

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <nav>
-    <input list="paradas" id="escoger-parada" placeholder="Busca una parada">
+    <input list="paradas" id="search" placeholder="Busca una parada">
     <datalist id="paradas">
       <option value="Santiago de Compostela">
       <option value="León">
@@ -18,6 +18,15 @@
       <option value="Pamplona">
       <option value="Saint-Jean-Pied-de-Port"> 
     </datalist>
+    <!-- Menú -->
+    <ul id="menu-nav">
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="pages/santiago.html">Santiago de Compostela</a></li>
+      <li><a href="pages/leon.html">León</a></li>
+      <li><a href="pages/burgos.html">Burgos</a></li>
+      <li><a href="pages/pamplona.html">Pamplona</a></li>
+      <li><a href="pages/saint-jean-pied-de-port.html">Saint-Jean-Pied-de-Port</a></li>
+    </ul>
   </nav>
   <iframe src="https://www.google.com/maps/embed?pb=!1m58!1m12!1m3!1d3125700.556412189!2d-5.277426216683586!3d40.087858363279395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m43!3e2!4m5!1s0xd50d5616cb5d49f%3A0x27d43cc64a91e1c7!2sSaint-Jean-Pied-de-Port%2C%20France!3m2!1d43.163140999999996!2d-1.23811!4m5!1s0xd50928ba31965c7%3A0x4e6e903632cb2e90!2sPamplona!3m2!1d42.812526!2d-1.6457745!4m5!1s0xd5aab4130b390b1%3A0xf98252918a168870!2zTG9ncm_DsW8!3m2!1d42.4627195!2d-2.4449852!4m5!1s0xd45fcbe3dc20327%3A0xa1f5beab8e71aa1!2sBurgos!3m2!1d42.350465899999996!2d-3.6893545!4m5!1s0xd379a9a0d5e1bd9%3A0x7d849ffad4f1eef3!2zTGXDs24!3m2!1d42.5983611!2d-5.5718779!4m5!1s0xd3048097fbf82ad%3A0x9004c74b09000a64!2sSarria!3m2!1d42.7808389!2d-7.4140766!4m5!1s0xd2efe4326414707%3A0xa18e63b9d0a316c5!2sCathedral%20of%20Santiago%20de%20Compostela%2C%20Praza%20do%20Obradoiro%2C%20s%2Fn%2C%2015704%20Santiago%20de%20Compostela%2C%20A%20Coru%C3%B1a!3m2!1d42.8805962!2d-8.5446412!5e0!3m2!1sen!2ses!4v1676626122715!5m2!1sen!2ses" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   <div class="ciudades">
