--- a/pages/santiago.html
+++ b/pages/santiago.html
@@ -9,7 +9,7 @@
 
 <body>
   <nav>
-    <input list="paradas" id="escoger-parada" placeholder="Busca una parada">
+    <input list="paradas" id="search" placeholder="Busca una parada">
     <datalist id="paradas">
       <option value="Santiago de Compostela">
       <option value="León">
