--- a/pages/santiago.html
+++ b/pages/santiago.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Santiago de Compostela - El amigo del peregrino</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style-parada.css">
     <!-- <script src="../js/index.js"></script> -->
 </head>
 
-<body>
-  <nav>
+<body class="body">
+  <nav class="barra-busqueda">
     <input list="paradas" id="search" placeholder="Busca una parada">
     <datalist id="paradas">
       <option value="Santiago de Compostela">
@@ -18,27 +20,42 @@
       <option value="Saint-Jean-Pied-de-Port"> 
     </datalist>
   </nav>
-  <figure>
-    <img src="../img/santiago/catedral.jpg" alt="Catedral de Santiago de Compostela">
-  </figure>
-  <h1>Santiago de Compostela</h1>
-  <p>
-    La ciudad de Santiago de Compostela es la capital de la provincia homónima y de la comunidad autónoma de Galicia.
-    Es la ciudad más poblada de Galicia y la quinta de España, con 95 000 habitantes en 2019.
-    Es la sede de la catedral de Santiago de Compostela, declarada Patrimonio de la Humanidad por la Unesco en 1985.
-    La ciudad es conocida por ser el destino final de la ruta jacobea, una de las rutas de peregrinación más importantes del mundo.
-    La ciudad es sede de la Universidad de Santiago de Compostela, la más antigua de España y una de las más antiguas de Europa.
-  </p>
-  <h2>Lugares destacados</h2>
-  <h3>Restaurantes</h3>
-  <p><a href="https://www.mercadolagaliciana.es/">La Galiciana</a></p>
-  <figure>
-    <img src="../img/santiago/la-galiciana.jpg" alt="La Galiciana">
-  </figure>
-  <h3>Discotecas top</h3>
-  <p><a href="https://www.instagram.com/discotecarutaoficial/">Discoteca Ruta</a></p>
-    <figure>
-        <img src="../img/santiago/discoteca-ruta.jpg" alt="Discoteca Ruta">
-    </figure>
+
+  <div class="info-general">
+      <h1>Santiago de Compostela</h1>
+      <figure class="info-imagen">
+        <img src="../img/santiago/catedral.jpg" alt="Catedral de Santiago de Compostela">
+      </figure>
+      <p>
+        La ciudad de Santiago de Compostela es la capital de La Coruña y de la comunidad autónoma de Galicia.
+        Es la ciudad más poblada de Galicia y la quinta de España, con 95 000 habitantes en 2019.
+        Es la sede de la catedral de Santiago de Compostela, declarada Patrimonio de la Humanidad por la Unesco en 1985.
+        La ciudad es conocida por ser el destino final de la ruta jacobea, una de las rutas de peregrinación más importantes del mundo.
+        La ciudad es sede de la Universidad de Santiago de Compostela, la más antigua de España y una de las más antiguas de Europa.
+      </p>
+  </div>
+  <hr>
+  <div class="destacados">
+    <h3>Lugares destacados</h3>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <h5>Restaurantes</h5>
+          <figure>
+            <img src="../img/santiago/la-galiciana.jpg" alt="La Galiciana">
+          </figure>
+          <p><a href="https://www.mercadolagaliciana.es/">La Galiciana</a></p>
+        </div>
+        <hr>
+        <div class="col-sm">
+          <h5>Vida nocturna</h5>
+          <figure>
+              <img src="../img/santiago/discoteca-ruta.jpg" alt="Discoteca Ruta">
+          </figure>
+          <p><a href="https://www.instagram.com/discotecarutaoficial/">Discoteca Ruta</a></p>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
