--- a/pages/santiago.html
+++ b/pages/santiago.html
@@ -10,79 +10,137 @@
 </head>
 
 <body class="body">
-  <nav>
-    <input list="paradas" id="search" placeholder="Busca una parada">
-    <datalist id="paradas">
-      <option value="Santiago de Compostela">
-      <option value="León">
-      <option value="Burgos">
-      <option value="Pamplona">
-      <option value="Saint-Jean-Pied-de-Port"> 
-    </datalist>
+  <nav id="navbar">
     <!-- Menú -->
-    <ul id="menu-nav">
-      <li><a href="../index.html">Inicio</a></li>
-      <li><a href="./santiago.html">Santiago de Compostela</a></li>
-      <li><a href="./leon.html">León</a></li>
-      <li><a href="./burgos.html">Burgos</a></li>
-      <li><a href="./pamplona.html">Pamplona</a></li>
-      <li><a href="./saint-jean-pied-de-port.html">Saint-Jean-Pied-de-Port</a></li>
-    </ul>
+    <div class="container-fluid nav-container">
+      <a class="navbar-brand" href="index.html">El amigo del peregrino</a>
+      <button class="boton">Modo oscuro</button>
+      <ul id="nav-links">
+        <li><a href="../index.html">Inicio</a></li>
+        <li class="nav-dropdown">
+          <a href="#">Paradas</a>
+          <div class="nav-dropdown-content">
+            <a href="./santiago.html">Santiago de Compostela</a>
+            <a href="./leon.html">León</a>
+            <a href="./burgos.html">Burgos</a>
+            <a href="./pamplona.html">Pamplona</a>
+            <a href="./saint-jean-pied-de-port.html">Saint-Jean-Pied-de-Port</a>
+          </div>
+        </li>
+        <li><a href="pages/about.html">About</a></li>
+        <!-- Dropdown -->
+        <!-- <button id="dropbtn">Más</button>
+        <ul id="dropdown" style="display: none;">
+          <li><a href="pages/sarria.html">Sarria</a></li>
+          <li><a href="pages/estella.html">Estella</a></li>
+          <li><a href="pages/logrono.html">Logroño</a></li>
+        </ul> -->
+      </ul>
+  
+      <!-- Buscador -->
+      <!-- <input list="paradas" id="search" placeholder="Busca una parada"> -->
+      <!-- <datalist id="paradas">
+        <option value="Santiago de Compostela">
+        <option value="León">
+        <option value="Burgos">
+        <option value="Pamplona">
+        <option value="Saint-Jean-Pied-de-Port"> 
+      </datalist> -->
+    </div>
   </nav>
 
-  <div class="info-general">
+  <div class="content">
+    <div class="info-general">
       <h1>Santiago de Compostela</h1>
       <figure class="info-imagen">
         <img src="../img/santiago/catedral.jpg" alt="Catedral de Santiago de Compostela">
+        <p>
+          La ciudad de Santiago de Compostela es la capital de La Coruña y de la comunidad autónoma de Galicia.
+          Es la ciudad más poblada de Galicia y la quinta de España, con 95 000 habitantes en 2019.
+          Es la sede de la catedral de Santiago de Compostela, declarada Patrimonio de la Humanidad por la Unesco en 1985.
+          La ciudad es conocida por ser el destino final de la ruta jacobea, una de las rutas de peregrinación más importantes del mundo.
+          La ciudad es sede de la Universidad de Santiago de Compostela, la más antigua de España y una de las más antiguas de Europa.
+        </p>
       </figure>
-      <p>
-        La ciudad de Santiago de Compostela es la capital de La Coruña y de la comunidad autónoma de Galicia.
-        Es la ciudad más poblada de Galicia y la quinta de España, con 95 000 habitantes en 2019.
-        Es la sede de la catedral de Santiago de Compostela, declarada Patrimonio de la Humanidad por la Unesco en 1985.
-        La ciudad es conocida por ser el destino final de la ruta jacobea, una de las rutas de peregrinación más importantes del mundo.
-        La ciudad es sede de la Universidad de Santiago de Compostela, la más antigua de España y una de las más antiguas de Europa.
-      </p>
-  </div>
-  <hr>
-  <div class="destacados">
-    <h3>Lugares destacados</h3>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm">
-          <h5 id="titulo">Restaurantes</h5>
-          <figure>
-            <img src="../img/santiago/la-galiciana.jpg" alt="La Galiciana">
-          </figure>
-          <p class="texto-imagen">Disfruta de los mejores sabores santiagueses</p>
-          <p><a href="https://www.mercadolagaliciana.es/">La Galiciana</a></p>
+    </div>
+    <hr>
+    <div class="sitios-parada">
+      <div class="container-fluid">
+        <div class="row">
+          <h3>Top Restaurantes</h3>
+          <div class="col-sm">
+            <figure>
+              <h5 id="titulo">La Galiciana</h5>
+              <img src="../img/santiago/la-galiciana.jpg" alt="La Galiciana" id="imagen-sitio">
+              <p class="texto-imagen">Disfruta de los mejores sabores santiagueses</p>
+              <p><a href="https://www.mercadolagaliciana.es/">Página del sitio</a></p>
+            </figure>
+          </div>
+          <div class="col-sm">
+            <figure>
+              <h5 id="titulo">Pepa a Loba</h5>
+              <img src="../img/santiago/pepa_a_loba.jpg" alt="Pepa a Loba">
+              <p class="texto-imagen">Situado en plena zona vella.</p>
+              <p><a href="https://www.mercadolagaliciana.es/">Instagram</a></p>
+            </figure>
+          </div>
+          <hr>
         </div>
-        <hr>
-        <div class="col-sm">
-          <h5>Vida nocturna</h5>
-          <figure>
+        <div class="row">
+          <h3>Vida nocturna</h3>
+          <div class="col-sm">
+            <figure>
+              <h5 id="titulo">Discoteca Ruta</h5>
               <img src="../img/santiago/discoteca-ruta.jpg" alt="Discoteca Ruta">
-          </figure>
-          <p><a href="https://www.instagram.com/discotecarutaoficial/">Discoteca Ruta</a></p>
+              <p><a href="https://www.instagram.com/discotecarutaoficial/">Discoteca Ruta</a></p>
+            </figure>
+          </div>
+          <div class="col-sm">
+            <figure>
+              <h5 id="titulo">Pub Momo</h5>
+              <img src="../img/santiago/momo.jpg" alt="Discoteca Ruta">
+              <p><a href="https://www.instagram.com/discotecarutaoficial/">Sitio web</a></p>
+            </figure>            
+          </div>
         </div>
       </div>
     </div>
   </div>
 
   <script>
-    document.getElementById("titulo").style.color="red";
-    document.getElementById("titulo").addEventListener("click", changeColor);
-
-    function changeColor(){
-      document.getElementById("titulo").style.color="green";
-    }
-
-    document.getElementsByTagName("figure").addEventListener("click", mostrarTexto);
-
-    function mostrarTexto(){
-      alert("Has clicado una imagen!");
-      /*document.getElementsByClassName(".texto-imagen").style.display="none";*/
-    }
     
+    document.getElementsByClassName("boton")[0].addEventListener("click", function(){
+
+      //console.log(this.nodeName + ", " + this.nodeType + ", " + this.innerText)
+
+      if (this.innerText == "Modo oscuro"){
+        document.body.style.backgroundColor = "black";
+        document.body.style.color = "white"
+        this.innerText = "Modo claro";
+      }
+      else{
+        document.body.style.backgroundColor = "white";
+        document.body.style.color = "black";
+        this.innerText = "Modo oscuro";
+      }
+    });
+
+    const imagenSitio = document.getElementById("imagen-sitio");
+
+    imagenSitio.addEventListener("click", function(){
+      console.log("altura: " + this.height)
+      //this.style.height = '"' + this.style.height * 1.2 + '"'; 
+      this.height = '50px'; 
+      
+    })
+
+    /*
+    function hacerGrande(){
+      height = "500px";
+      width = "500px";
+      console.log("Click")
+    }
+*/
   </script>
 
 </body>
