reestructuracion index.js

--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
   <nav id="navbar">
     <!-- Menú -->
     <div class="container-fluid nav-container">
-      <a class="navbar-brand" href="index.html">El amigo del peregrino</a>
+      <a class="navbar-brand" href="../index.html">El amigo del peregrino</a>
+      <button class="boton">Modo oscuro</button>
       <ul id="nav-links">
-        <li><a href="#">Inicio</a></li>
-        <li class="nav-dropdown">
-          <a href="#">Paradas</a>
+        <li><a href="../index.html">Inicio</a></li>
+        <li class="nav-dropdown" id="dropdown">
+          <a href="#" id="dropbtn">Paradas</a>
           <div class="nav-dropdown-content">
-            <a href="pages/santiago.html">Santiago de Compostela</a>
-            <a href="pages/leon.html">León</a>
-            <a href="pages/burgos.html">Burgos</a>
-            <a href="pages/pamplona.html">Pamplona</a>
-            <a href="pages/saint-jean-pied-de-port.html">Saint-Jean-Pied-de-Port</a>
+            <a href="./santiago.html">Santiago de Compostela</a>
+            <a href="./leon.html">León</a>
+            <a href="./burgos.html">Burgos</a>
+            <a href="./pamplona.html">Pamplona</a>
+            <a href="./saint-jean-pied-de-port.html">Saint-Jean-Pied-de-Port</a>
           </div>
         </li>
         <li><a href="pages/about.html">About</a></li>
