--- a/pages/santiago.html
+++ b/pages/santiago.html
@@ -3,66 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <title>Santiago de Compostela - El amigo del peregrino</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&family=Kanit&family=Pathway Gothic One">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/style-parada.css">
-    <!-- <script src="../js/index.js"></script> -->
 </head>
 
 <body class="body">
   <nav id="navbar">
-    <!-- Menú -->
-    <div class="container-fluid nav-container">
-      <a class="navbar-brand" href="../index.html">El amigo del peregrino</a>
-      <button class="boton">Modo oscuro</button>
+    <div class="container-fluid nav-container" style="position: relative">
+      <a class="navbar-brand" href="index.html">El amigo del peregrino</a>
+      <a class="boton-tema" href="#">&#9789; Modo oscuro</a>
       <ul id="nav-links">
-        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="index.html">Inicio</a></li>
         <li class="nav-dropdown" id="dropdown">
           <a href="#" id="dropbtn">Paradas</a>
           <div class="nav-dropdown-content">
-            <a href="./santiago.html">Santiago de Compostela</a>
-            <a href="./leon.html">León</a>
-            <a href="./burgos.html">Burgos</a>
-            <a href="./pamplona.html">Pamplona</a>
-            <a href="./saint-jean-pied-de-port.html">Saint-Jean-Pied-de-Port</a>
+            <a href="santiago.html">Santiago de Compostela</a>
+            <a href="leon.html">León</a>
+            <a href="burgos.html">Burgos</a>
+            <a href="pamplona.html">Pamplona</a>
+            <a href="saint-jean-pied-de-port.html">Saint-Jean-Pied-de-Port</a>
           </div>
         </li>
-        <li><a href="pages/about.html">About</a></li>
-        <!-- Dropdown -->
-        <!-- <button id="dropbtn">Más</button>
-        <ul id="dropdown" style="display: none;">
-          <li><a href="pages/sarria.html">Sarria</a></li>
-          <li><a href="pages/estella.html">Estella</a></li>
-          <li><a href="pages/logrono.html">Logroño</a></li>
-        </ul> -->
+        <li><a href="about.html">About</a></li>
       </ul>
-  
-      <!-- Buscador -->
-      <!-- <input list="paradas" id="search" placeholder="Busca una parada"> -->
-      <!-- <datalist id="paradas">
-        <option value="Santiago de Compostela">
-        <option value="León">
-        <option value="Burgos">
-        <option value="Pamplona">
-        <option value="Saint-Jean-Pied-de-Port"> 
-      </datalist> -->
     </div>
   </nav>
-
-  <div class="content">
+  <div class="content" style="position: absolute;">
     <div class="info-general">
-      <h1>Santiago de Compostela</h1>
       <figure class="info-imagen">
         <img src="../img/santiago/catedral.jpg" alt="Catedral de Santiago de Compostela">
-        <p>
-          La ciudad de Santiago de Compostela es la capital de La Coruña y de la comunidad autónoma de Galicia.
-          Es la ciudad más poblada de Galicia y la quinta de España, con 95 000 habitantes en 2019.
-          Es la sede de la catedral de Santiago de Compostela, declarada Patrimonio de la Humanidad por la Unesco en 1985.
-          La ciudad es conocida por ser el destino final de la ruta jacobea, una de las rutas de peregrinación más importantes del mundo.
-          La ciudad es sede de la Universidad de Santiago de Compostela, la más antigua de España y una de las más antiguas de Europa.
-        </p>
+        <h1 class="titulo">Santiago de Compostela</h1>
       </figure>
     </div>
+    <p class="info-parada">
+      La ciudad de Santiago de Compostela es la capital de La Coruña y de la comunidad autónoma de Galicia.
+      Es la ciudad más poblada de Galicia y la quinta de España, con 95 000 habitantes en 2019.
+      Es la sede de la catedral de Santiago de Compostela, declarada Patrimonio de la Humanidad por la Unesco en 1985.
+      La ciudad es conocida por ser el destino final de la ruta jacobea, una de las rutas de peregrinación más importantes del mundo.
+      La ciudad es sede de la Universidad de Santiago de Compostela, la más antigua de España y una de las más antiguas de Europa.
+    </p>
     <hr>
     <div class="sitios-parada">
       <div class="container-fluid">
