Más arreglos y adiciones, preparar jquery

--- a/pages/index.html
+++ b/pages/index.html
@@ -2,10 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <!-- Ancho del dispositivo -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - El amigo del peregrino</title>
-    <!-- IMPORTANTE: El orden de link afecta a la prioridad de cada CSS -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&family=Kanit&family=Pathway Gothic One">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -13,9 +11,9 @@
 
 <body>
   <nav id="navbar">
-    <div class="container-fluid nav-container" style="position: relative;">
+    <div class="container-fluid nav-container">
       <a class="navbar-brand" href="index.html">El amigo del peregrino</a>
-      <a class="boton-tema" href="#">&#9789; Modo oscuro</a>
+      <a class="boton-tema" href="javascript:void(0)">&#9789; Modo oscuro</a>
       <ul id="nav-links">
         <li><a href="index.html">Inicio</a></li>
         <li class="nav-dropdown" id="dropdown">
@@ -28,18 +26,22 @@
             <a href="saint-jean-pied-de-port.html">Saint-Jean-Pied-de-Port</a>
           </div>
         </li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html">Sobre nosotros</a></li>
       </ul>
     </div>
   </nav>
-  <div id="content" style="position: absolute; margin-top: 1.5%;">
-    <h1>Camino francés</h1>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m58!1m12!1m3!1d3125700.556412189!2d-5.277426216683586!3d40.087858363279395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m43!3e2!4m5!1s0xd50d5616cb5d49f%3A0x27d43cc64a91e1c7!2sSaint-Jean-Pied-de-Port%2C%20France!3m2!1d43.163140999999996!2d-1.23811!4m5!1s0xd50928ba31965c7%3A0x4e6e903632cb2e90!2sPamplona!3m2!1d42.812526!2d-1.6457745!4m5!1s0xd5aab4130b390b1%3A0xf98252918a168870!2zTG9ncm_DsW8!3m2!1d42.4627195!2d-2.4449852!4m5!1s0xd45fcbe3dc20327%3A0xa1f5beab8e71aa1!2sBurgos!3m2!1d42.350465899999996!2d-3.6893545!4m5!1s0xd379a9a0d5e1bd9%3A0x7d849ffad4f1eef3!2zTGXDs24!3m2!1d42.5983611!2d-5.5718779!4m5!1s0xd3048097fbf82ad%3A0x9004c74b09000a64!2sSarria!3m2!1d42.7808389!2d-7.4140766!4m5!1s0xd2efe4326414707%3A0xa18e63b9d0a316c5!2sCathedral%20of%20Santiago%20de%20Compostela%2C%20Praza%20do%20Obradoiro%2C%20s%2Fn%2C%2015704%20Santiago%20de%20Compostela%2C%20A%20Coru%C3%B1a!3m2!1d42.8805962!2d-8.5446412!5e0!3m2!1sen!2ses!4v1676626122715!5m2!1sen!2ses" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    <p>El camino francés es el más popular de los caminos de Santiago. Es el que más peregrinos recibe cada año. Es el camino más corto y el más fácil de recorrer. Es el camino que más gente recomienda para hacer el Camino de Santiago.</p>
+  <div class="spacer"></div>
+  <div id="content">
+    <div class="intro">
+      <h1>Descubre el camino francés</h1>
+      <p>Los mejores lugares para visitar, comer y disfrutar de la ruta, en un mismo sitio</p>
+    </div>
+    <div class="spacer"></div>
     <figure>
       <h2>Parada destacada: Burgos</h2>
       <img src="../img/destacada.png" alt="Lugar destacado">
     </figure>
+    <div class="spacer"></div>
     <div class="sitios-home">  
       <div class="container-fluid">
         <h2>Top Restaurantes</h2>
@@ -47,7 +49,7 @@
           <div class="col-sm">
             <figure>
               <h3>Pepa a Loba (Santiago)</h3>
-              <p>Este centrico restaurante en la zona vieja de Santiago te embaucara con su localizacion y sus sabores</p>  
+              <p>Este céntrico restaurante en la zona vieja de Santiago te embaucará con sus sabores</p>  
               <img src="../img/santiago/pepa_a_loba.jpg" alt="Pepa a Loba (Santiago)">
             </figure>
           </div>
@@ -67,7 +69,6 @@
           </div>
         </div>
       </div>
-      
       <div class="container-fluid">
         <h2>Top Pubs</h2>
         <div class="row">
@@ -81,7 +82,7 @@
           <div class="col-sm">
             <figure>
               <h3>Gabana (León)</h3>
-              <p>Si los sitios de jovenes no es tu ambiente, esta discoteca de mediana edad sera tu espacio de disfrute</p>
+              <p>Si ser joven te quedó atrás, esta discoteca de mediana edad puede ser ideal para ti</p>
               <img src="../img/leon/gabana.jpg" alt="Gabana (León)">
             </figure>
           </div>
@@ -95,7 +96,67 @@
         </div>
       </div>
     </div>
+    <div class="spacer"></div>
+    <div class="opiniones">
+      <h2>Lee las opiniones de otros peregrinos</h2>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-sm">
+            <figure>
+              <h3>Opinión de Juan</h3>
+              <p>El camino francés es una experiencia inolvidable. La gente es muy amable y la comida es deliciosa. Recomiendo encarecidamente este camino.</p>
+              <img src="../img/opiniones/juan.jpg" alt="Opinión de Juan">
+            </figure>
+          </div>
+          <div class="col-sm">
+            <figure>
+              <h3>Opinión de María</h3>
+              <p>El camino francés es una experiencia inolvidable. La gente es muy amable y la comida es deliciosa. Recomiendo encarecidamente este camino.</p>
+              <img src="../img/opiniones/maria.jpg" alt="Opinión de María">
+            </figure>
+          </div>
+          <div class="col-sm">
+            <figure>
+              <h3>Opinión de Ana</h3>
+              <p>El camino francés es una experiencia inolvidable. La gente es muy amable y la comida es deliciosa. Recomiendo encarecidamente este camino.</p>
+              <img src="../img/opiniones/ana.jpg" alt="Opinión de Ana">
+            </figure>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="spacer"></div>
+    <div id="mapa">
+      <h2>Sitúate en el mapa</h2>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m58!1m12!1m3!1d3125700.556412189!2d-5.277426216683586!3d40.087858363279395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m43!3e2!4m5!1s0xd50d5616cb5d49f%3A0x27d43cc64a91e1c7!2sSaint-Jean-Pied-de-Port%2C%20France!3m2!1d43.163140999999996!2d-1.23811!4m5!1s0xd50928ba31965c7%3A0x4e6e903632cb2e90!2sPamplona!3m2!1d42.812526!2d-1.6457745!4m5!1s0xd5aab4130b390b1%3A0xf98252918a168870!2zTG9ncm_DsW8!3m2!1d42.4627195!2d-2.4449852!4m5!1s0xd45fcbe3dc20327%3A0xa1f5beab8e71aa1!2sBurgos!3m2!1d42.350465899999996!2d-3.6893545!4m5!1s0xd379a9a0d5e1bd9%3A0x7d849ffad4f1eef3!2zTGXDs24!3m2!1d42.5983611!2d-5.5718779!4m5!1s0xd3048097fbf82ad%3A0x9004c74b09000a64!2sSarria!3m2!1d42.7808389!2d-7.4140766!4m5!1s0xd2efe4326414707%3A0xa18e63b9d0a316c5!2sCathedral%20of%20Santiago%20de%20Compostela%2C%20Praza%20do%20Obradoiro%2C%20s%2Fn%2C%2015704%20Santiago%20de%20Compostela%2C%20A%20Coru%C3%B1a!3m2!1d42.8805962!2d-8.5446412!5e0!3m2!1sen!2ses!4v1676626122715!5m2!1sen!2ses" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <div class="spacer"></div>
+    <div id="comentarios">
+      <h2>Déjanos un comentario</h2>
+      <form>
+        <label for="nombre">Nombre</label>
+        <input type="text" id="nombre" name="nombre" placeholder="Tu nombre">
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" placeholder="Tu email">
+        <label for="comentario">Comentario</label>
+        <textarea id="comentario" name="comentario" placeholder="Deja aquí tu comentario"></textarea>
+        <input type="submit" value="Enviar">
+      </form>
+    </div>
+    <div class="spacer"></div>
+
   </div>
+  <footer>
+    <div class="social-links">
+      <p>Síguenos en nuestras redes sociales</p>
+      <a href="https://www.instagram.com/" target="_blank"><img src="../img/social/instagram.png" alt="Instagram"></a>
+      <a href="https://www.twitter.com/" target="_blank"><img src="../img/social/twitter.png" alt="Twitter"></a>
+      <a href="https://www.facebook.com/" target="_blank"><img src="../img/social/facebook.png" alt="Facebook"></a>
+      <a href="https://www.tiktok.com/" target="_blank"><img src="../img/social/tiktok.png" alt="TikTok"></a>
+    </div>
+    <div class="spacer"></div>
+    <p style="text-align: center;">Copyright &copy; 2023 - El amigo del peregrino</p>
+  </footer>
   <script src="../js/index.js"></script>
 </body>
 </html>
