--- a/pages/about.html
+++ b/pages/about.html
@@ -11,10 +11,9 @@
 
 <body>
   <nav id="navbar">
-    <!-- Menú -->
     <div class="container-fluid nav-container">
       <a class="navbar-brand" href="index.html">El amigo del peregrino</a>
-      <a class="boton-tema" href="#" onclick="return false">&#9789; Modo oscuro</a>
+      <a class="boton-tema" href="#">&#9789; Modo oscuro</a>
       <ul id="nav-links">
         <li><a href="index.html">Inicio</a></li>
         <li class="nav-dropdown" id="dropdown">
@@ -27,13 +26,11 @@
             <a href="saint-jean-pied-de-port.html">Saint-Jean-Pied-de-Port</a>
           </div>
         </li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html">Sobre nosotros</a></li>
       </ul>
     </div>
   </nav>
-  <div class="spacer">
-    &nbsp;
-  </div>
+  <div class="spacer"></div>
   <div id="content">
     <h1>Sobre nosotros</h1>
     <br>
