--- a/pages/santiago.html
+++ b/pages/santiago.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Santiago de Compostela - El amigo del peregrino</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&family=Kanit&family=Pathway Gothic One">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -11,7 +12,7 @@
 
 <body class="body">
   <nav id="navbar">
-    <div class="container-fluid nav-container" style="position: relative">
+    <div class="container-fluid nav-container">
       <a class="navbar-brand" href="index.html">El amigo del peregrino</a>
       <a class="boton-tema" href="#">&#9789; Modo oscuro</a>
       <ul id="nav-links">
@@ -26,10 +27,11 @@
             <a href="saint-jean-pied-de-port.html">Saint-Jean-Pied-de-Port</a>
           </div>
         </li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html">Sobre nosotros</a></li>
       </ul>
     </div>
   </nav>
+  <div class="spacer"></div>
   <div class="content" style="position: absolute;">
     <div class="info-general">
       <figure class="info-imagen">
